--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World!
+<!doctype html>
+
+<html>
+<head>
+  <source src="cssreset.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
+<body>
+<h1>Mitrais Carrot</h1>
+
+<p>Mitrais Carrot is a reward system based on the following principles, Automatic rewards, Company wise discretion rewards, and Employees can get rewarded by achieving a greater goal.</p>
+
+</body>
+</html>
