make style in h1

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Mitrais Carrot</h1>
+<h1 style="color:blue" align="center">Mitrais Carrot</h1>
 
 <p>Mitrais Carrot is a reward system based on the following principles, Automatic rewards, Company wise discretion rewards, and Employees can get rewarded by achieving a greater goal.</p>
 
