edit description in index.html and try to add new text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 <h1 style="color:blue" align="center">Mitrais Carrot</h1>
 
-<p>Mitrais Carrot is a reward system based on the following principles, Automatic rewards, Company wise discretion rewards, and Employees can get rewarded by achieving a greater goal.</p>
+<p>Mitrais Carrot is a reward system based on the following principles, Automatic rewards, Company wise discretion rewards, and Employees can get rewarded by achieving a greater goal.
+Using this system the company will be able to provide a reward to proper employee at the proper time</p>
 
 </body>
 </html>
